--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -51,6 +51,7 @@
       <li class="nav-item mb-2"><a routerLink="/gestione-schema" class="nav-link">🧩 Gestione Schema</a></li>
       <li class="nav-item mb-2"><a routerLink="/gestione-pasti" class="nav-link">🍴 Gestione Pasti</a></li>
       <li class="nav-item mb-2"><a routerLink="/esporta" class="nav-link">📤 Esporta</a></li>
+      <li class="nav-item mb-2"><a routerLink="/ricette" class="nav-link">📂 Ricette</a></li>
       <li class="nav-item mt-4"><button class="btn btn-outline-danger w-100" (click)="logout()">Logout</button></li>
     </ul>
   </div>
