--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -30,6 +30,9 @@
     <li class="nav-item mb-2">
       <a routerLink="/gestione-pasti" class="nav-link" (click)="toggleSidebar()">🍴 Gestione Pasti</a>
     </li>
+        <li class="nav-item mb-2">
+      <a routerLink="/pazienti" class="nav-link" (click)="toggleSidebar()">👥 Pazienti</a>
+    </li>
     <li class="nav-item mb-2">
       <a routerLink="/esporta" class="nav-link" (click)="toggleSidebar()">📤 Esporta</a>
     </li>
@@ -50,6 +53,7 @@
       <li class="nav-item mb-2"><a routerLink="/inserisci" class="nav-link">➕ Inserisci</a></li>
       <li class="nav-item mb-2"><a routerLink="/gestione-schema" class="nav-link">🧩 Gestione Schema</a></li>
       <li class="nav-item mb-2"><a routerLink="/gestione-pasti" class="nav-link">🍴 Gestione Pasti</a></li>
+      <li class="nav-item mb-2"><a routerLink="/pazienti" class="nav-link">👥 Pazienti</a></li>
       <li class="nav-item mb-2"><a routerLink="/esporta" class="nav-link">📤 Esporta</a></li>
       <li class="nav-item mb-2"><a routerLink="/ricette" class="nav-link">📂 Ricette</a></li>
       <li class="nav-item mt-4"><button class="btn btn-outline-danger w-100" (click)="logout()">Logout</button></li>
